# cccc

./: CMakeLists.txt  README.adoc  ast.c  ast.h  codegen.c  context.c  context.h  dump.c  fixup.c  ir.c  ir.h  lexer.c  lexer.h  list.c  list.h  main.c  map.c  map.h  nameresolve.c  parser.c  parser.h  regalloc.c  simplify.c  strtable.c  strtable.h  token.h  type.c  type.h  typing.c  vector.c  vector.h  visitor.c  visitor.h
test/: main.c  run.sh  selfhost.sh  test.c
test_include/: assert.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
